--- a/deploy/redis/deployment.yaml
+++ b/deploy/redis/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: redis
     spec:
       containers:
-      - image: redis/alpine:latest
+      - image: docker.io/library/alpine:latest
         name: alpine
         resources: {}
 status: {}
