--- a/deploy/redis/deployment.yaml
+++ b/deploy/redis/deployment.yaml
@@ -18,7 +18,7 @@ spec:
         app: redis
     spec:
       containers:
-      - image: redis
+      - image: redis/alpine:v1
         name: alpine
         resources: {}
 status: {}
