--- a/deploy/vote/deployment.yaml
+++ b/deploy/vote/deployment.yaml
@@ -22,4 +22,5 @@ spec:
       containers:
       - image: schoolofdevops/vote:v1
         name: vote
+        ImagePullPolicy: IfNotPresent
         resources: {}
