--- a/deploy/redis/deployment.yaml
+++ b/deploy/redis/deployment.yaml
@@ -20,5 +20,6 @@ spec:
       containers:
       - image: redis/alpine:v1
         name: alpine
+        ImagePullPolicy: IfNotPresent
         resources: {}
 status: {}
